update popover to be more user friendly on mobile, added close button for popover, changed checkbox color to be more neutral, add placeholder for filterbar, change popover to be anchored in center of screen to prevent it from moving when adding many filters

--- a/frontend/src/modules/BrowsePage/FilterPopOver/FilterPopOver.module.scss
+++ b/frontend/src/modules/BrowsePage/FilterPopOver/FilterPopOver.module.scss
@@ -1,5 +1,16 @@
 div .filterPopOverDiv {
   width: 50vw;
   min-height: 50vh;
-  padding: 1rem;
+  padding: 2rem;
+}
+
+div .mobilePopOverDiv{
+  width: fit-content;
+}
+
+div .closeButton{
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 10px;
 }
